fixing styling in several css files (alignment)

--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -12,12 +12,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding: 2.5rem 0;
+    padding: 2.7rem 0;
 }
 .logo {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: .1rem;
 }
 .progress-sub-container {
     display: flex;
